--- a/web.html
+++ b/web.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+	<link rel="stylesheet" type="text/css" href="	styles/2.css">	
+	<title>	CSs lab</title>
 </head>
 <body>
-    
-    ti pidor!
+<section class="Features">
+
+	<h1 class="Header">Features</h1>
+	<img src="images/1.png" alt="1 icon" title="Кукусіки :-)">
+	
+		<h1>Online Testing</h1>
+	<p id="TextMenu">
+			venenatis elementum pharetra. Quisque scelerisque ante id semper eleifend. Phasellus auctor viverra nisl in scelerisque. Mauris feugiat tempor congue. Aliquam pulvinar magna nulla, ac molestie leo tincidunt a. Vivamus ultrices fringilla nibh vel dictum.
+
+	</p>
+
+	<img src="images/2.png" alt="1 icon">
+	
+		<h1>Online Testing</h1>
+	<p id="TextMenu">
+			venenatis elementum pharetra. Quisque scelerisque ante id semper eleifend. Phasellus auctor viverra nisl in scelerisque. Mauris feugiat tempor congue. Aliquam pulvinar magna nulla, ac molestie leo tincidunt a. Vivamus ultrices fringilla nibh vel dictum.
+
+	</p>
+
+	<img src="images/3.png" alt="1 icon">
+	
+		<h1>Online Testing</h1>
+	<p id="TextMenu">
+			venenatis elementum pharetra. Quisque scelerisque ante id semper eleifend. Phasellus auctor viverra nisl in scelerisque. Mauris feugiat tempor congue. Aliquam pulvinar magna nulla, ac molestie leo tincidunt a. Vivamus ultrices fringilla nibh vel dictum.
+
+	</p>
+
+	<img src="images/4.png" alt="1 icon">
+	
+		<h1>Online Testing</h1>
+	<p id="TextMenu">
+			venenatis elementum pharetra. Quisque scelerisque ante id semper eleifend. Phasellus auctor viverra nisl in scelerisque. Mauris feugiat tempor congue. Aliquam pulvinar magna nulla, ac molestie leo tincidunt a. Vivamus ultrices fringilla nibh vel dictum.
+
+	</p>
+
+	<img src="images/5.png" alt="1 icon">
+	
+		<h1>Online Testing</h1>
+	<p id="TextMenu">
+			venenatis elementum pharetra. Quisque scelerisque ante id semper eleifend. Phasellus auctor viverra nisl in scelerisque. Mauris feugiat tempor congue. Aliquam pulvinar magna nulla, ac molestie leo tincidunt a. Vivamus ultrices fringilla nibh vel dictum.
+
+	</p>
+
+	<img src="images/6.png" alt="1 icon">
+	
+		<h1>Online Testing</h1>
+	<p id="TextMenu">
+			venenatis elementum pharetra. Quisque scelerisque ante id semper eleifend. Phasellus auctor viverra nisl in scelerisque. Mauris feugiat tempor congue. Aliquam pulvinar magna nulla, ac molestie leo tincidunt a. Vivamus ultrices fringilla nibh vel dictum.
+
+	</p>
+
+
+</section>
+
+
+<section class="Programs">
+	
+	<h1 class="Header">Programs</h1>
+	
+<div class="ProgramWindow">
+	
+
+
+
+</div>
+
+<!-- <img src="images/7.jpg" alt="background image"> -->
+
+<h1>Pre-college education</h1>
+</section>
+
+
+
+
 </body>
 </html>
